--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^5.5.0",
+    "axios": "^1.4.0",
+    "http-proxy-middleware": "^2.0.6",
     "i18next": "^22.4.15",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
